src/objects/Area_Code__c.object
<CustomObject>
    <description>Phone Area Code</description>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Phone area code</description>
        <label>Area Code</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_State_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area State Code</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Area Codes</relationshipLabel>
        <relationshipName>Area_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Abbreviation__c</fullName>
        <label>State Abbreviation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State Picklist</description>
        <inlineHelpText>Choose the State</inlineHelpText>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <label>Area Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Area_Codes</fullName>
        <columns>NAME</columns>
        <columns>Area_State_Code__c</columns>
        <columns>Area_Code__c</columns>
        <columns>State_Abbreviation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Area Codes</label>
    </listViews>
    <nameField>
        <label>Area Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>